Remove emoji from error message and print statement

--- a/face_overlay.ipynb
+++ b/face_overlay.ipynb
@@ -55,11 +55,11 @@
         "except:\n",
         "    img_cv = cv2.imread(overlay_path, cv2.IMREAD_UNCHANGED)\n",
         "    if img_cv is None:\n",
-        "        raise ValueError(\"❌ Could not load image.\")\n",
+        "        raise ValueError(\"Could not load image.\")\n",
         "    image = Image.fromarray(cv2.cvtColor(img_cv, cv2.COLOR_BGRA2RGBA))\n",
         "\n",
         "# bg removal\n",
-        "print(\"\\n🔄 Removing background and cleaning transparency...\")\n",
+        "print(\"\\nRemoving background and cleaning transparency...\")\n",
         "\n",
         "def clean_white_regions(img_bgra):\n",
         "    \"\"\"Make near-white or white pixels transparent while preserving edges.\"\"\"\n",
