Update installation comment for clarity

--- a/face_overlay.ipynb
+++ b/face_overlay.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# installations\n",
+        "# all installations\n",
         "!pip install -q mediapipe==0.10.20 opencv-python-headless==4.9.0.80 numpy==1.26.4 pillow rembg\n",
         "\n",
         "import cv2\n",
